# apps/backend/user-service/src/controllers/types/user-cv-controller.type.ts
@@ -1,0 +1,9 @@
+import mongoose from "mongoose"
+export interface CvStyleParams {
+  _id: mongoose.Types.ObjectId; 
+  style: string;                 
+  json: {
+    version: string;             
+    objects: any[];              
+  };
+}
